Initial commit for z50 Handwired board

--- a/build.yaml
+++ b/build.yaml
@@ -11,6 +11,5 @@
 #   - board: nice_nano_v2
 #     shield: reviung41
 #
----
-include:
-  - board: planck_rev6
+board: ["nice_nano_v2"]
+shield: ["z50"]
